Bug 606509 - Text badly aligned for "deadline" and "bug numbered" in the search page r=simon, a=simon

--- a/skins/standard/search_form.css
+++ b/skins/standard/search_form.css
@@ -91,6 +91,10 @@
   text-align: right;
 }
 
+.field_label_sup {
+  font-weight: normal;
+}
+
 #summary_field.search_field_row {
   width: inherit;
 }
